Updated from Publii

--- a/categorias/index.html
+++ b/categorias/index.html
@@ -104,7 +104,7 @@
       </p>
       <h1>
          Tags
-         <sup>(4)</sup>
+         <sup>(5)</sup>
       </h1>    
    </section>
       <ul class="l-col l-col--3">
@@ -125,6 +125,21 @@
             </li>
             <li
                class="c-card">
+               <a href="https://expoturismoparaiba.com.br/categorias/atracoes/" class="c-card__link">
+                  <div class="c-card__body">
+                     <div class="c-card__text">
+                        <h2>
+                           Atrações
+                        </h2>
+                        <span>
+                           1 Post
+                        </span>
+                     </div>
+                  </div>
+               </a>
+            </li>
+            <li
+               class="c-card">
                <a href="https://expoturismoparaiba.com.br/categorias/cidades/" class="c-card__link">
                   <div class="c-card__body">
                      <div class="c-card__text">
@@ -132,7 +147,7 @@
                            Cidades
                         </h2>
                         <span>
-                           1 Post
+                           3 Posts
                         </span>
                      </div>
                   </div>
@@ -147,7 +162,7 @@
                            Dicas
                         </h2>
                         <span>
-                           5 Posts
+                           13 Posts
                         </span>
                      </div>
                   </div>
