--- a/tranquilidade-e-conforto-casa-com-2-quartos-em-dois-irmaos.html
+++ b/tranquilidade-e-conforto-casa-com-2-quartos-em-dois-irmaos.html
@@ -477,6 +477,14 @@
                   </div>
 
                      <nav class="content__nav">
+                           <div class="content__nav__prev">
+                              Previous Post
+                              <h5>
+                                 <a href="https://expoturismoparaiba.com.br/viagens-baratas-pelo-brasil-destinos-incriveis-que-cabem-no-bolso.html" class="invert" rel="prev">
+                                    Viagens Baratas pelo Brasil: Destinos Incríveis que Cabem no Bolso
+                                 </a>
+                              </h5>
+                           </div>
                            <div class="content__nav__next">
                               Next Post
                               <h5>
