Updated from Publii

--- a/o-fascinio-do-turismo-na-paraiba-descubra-os-tesouros-desconhecidos-do-nordeste-brasileiro.html
+++ b/o-fascinio-do-turismo-na-paraiba-descubra-os-tesouros-desconhecidos-do-nordeste-brasileiro.html
@@ -257,11 +257,19 @@
                   </div>
 
                      <nav class="content__nav">
+                           <div class="content__nav__prev">
+                              Previous Post
+                              <h5>
+                                 <a href="https://expoturismoparaiba.com.br/o-que-nao-pode-faltar-numa-mala-de-viagem-com-criancas.html" class="invert" rel="prev">
+                                    O que não pode faltar numa mala de viagem com crianças
+                                 </a>
+                              </h5>
+                           </div>
                            <div class="content__nav__next">
                               Next Post
                               <h5>
-                                 <a href="https://expoturismoparaiba.com.br/desfrute-de-bebidas-refrescantes-em-qualquer-lugar-a-magia-das-bebidas-instantaneas-tang-para-sua-viagem.html" class="invert" rel="next">
-                                    Desfrute de Bebidas Refrescantes em Qualquer Lugar: A Magia das Bebidas Instantâneas Tang para Sua Viagem
+                                 <a href="https://expoturismoparaiba.com.br/como-entreter-as-criancas-nas-viagens-longas.html" class="invert" rel="next">
+                                    Como Entreter as Crianças nas Viagens Longas
                                  </a>
                               </h5>
                            </div>
