--- a/pagina/2/index.html
+++ b/pagina/2/index.html
@@ -101,8 +101,8 @@
 </header>
 <main>
    <section class="hero wrapper">
-      <p>Your photography stories</p>
-<h1>Capturing life with natural light <i>photography</i></h1>
+      <p>Novas viagens começam aqui</p>
+<h2>Sinta-se nos melhores lugares, viaje conosco</h2>
    </section>
       <nav class="filter" aria-label="Content filters">
          <ul class="filter__button-group">
@@ -209,7 +209,7 @@
                class="c-card 
                       onde-comer 
                ">
-               <a href="https://expoturismoparaiba.com.br/costelinha-na-panela-de-pressao-saboreie-a-tradicao-em-suas-viagens-gastronomicas/" class="c-card__link">
+               <a href="https://expoturismoparaiba.com.br/costelinha-na-panela-de-pressao-tradicao-gastronomica-em-viagens/" class="c-card__link">
                         <div class="c-card__header">
                            <img
                               src="https://expoturismoparaiba.com.br/media/posts/4/Costelinha-na-Panela-de-Pressao-1.jpg"
@@ -234,7 +234,7 @@
                class="c-card 
                       dicas 
                ">
-               <a href="https://expoturismoparaiba.com.br/a-nova-moda-dos-alugueis-de-scooter-eletrica-e-cadeirinha-para-auto-nas-viagens/" class="c-card__link">
+               <a href="https://expoturismoparaiba.com.br/nova-moda-dos-alugueis-de-scooter-eletrica-e-cadeirinha-para-auto-nas-viagens/" class="c-card__link">
                         <div class="c-card__header">
                            <img
                               src="https://expoturismoparaiba.com.br/media/posts/3/Scooter.jpg"
@@ -334,7 +334,7 @@
                class="c-card 
                       cidades 
                ">
-               <a href="https://expoturismoparaiba.com.br/guia-encontra-paraiba-explore-as-riquezas-e-atracoes-do-estado-paraibano/" class="c-card__link">
+               <a href="https://expoturismoparaiba.com.br/guia-encontra-paraiba/" class="c-card__link">
                         <div class="c-card__header">
                            <img
                               src="https://expoturismoparaiba.com.br/media/posts/41/Guia-Encontra-Paraiba.jpg"
@@ -384,7 +384,7 @@
                class="c-card 
                       cidades 
                ">
-               <a href="https://expoturismoparaiba.com.br/onibus-belo-horizonte-sao-paulo-viagem-de-onibus-belo-horizonte-a-sao-paulo/" class="c-card__link">
+               <a href="https://expoturismoparaiba.com.br/onibus-belo-horizonte-sao-paulo/" class="c-card__link">
                         <div class="c-card__header">
                            <img
                               src="https://expoturismoparaiba.com.br/media/posts/37/Onibus-Belo-Horizonte-Sao-Paulo-1.jpg"
