--- a/pagina/3/index.html
+++ b/pagina/3/index.html
@@ -100,8 +100,8 @@
 </header>
 <main>
    <section class="hero wrapper">
-      <p>Your photography stories</p>
-<h1>Capturing life with natural light <i>photography</i></h1>
+      <p>Novas viagens começam aqui</p>
+<h2>Sinta-se nos melhores lugares, viaje conosco</h2>
    </section>
       <nav class="filter" aria-label="Content filters">
          <ul class="filter__button-group">
