Updated from Publii

--- a/10-erros-que-voce-deve-evitar-ao-comprar-uma-casa-em-aparecida-de-goiania/index.html
+++ b/10-erros-que-voce-deve-evitar-ao-comprar-uma-casa-em-aparecida-de-goiania/index.html
@@ -350,6 +350,14 @@
                                  </a>
                               </h5>
                            </div>
+                           <div class="content__nav__next">
+                              Next Post
+                              <h5>
+                                 <a href="https://expoturismoparaiba.com.br/como-combinar-uma-viagem-entre-joao-pessoa-e-fernando-de-noronha/" class="invert" rel="next">
+                                    Como combinar uma viagem entre João Pessoa e Fernando de Noronha
+                                 </a>
+                              </h5>
+                           </div>
                      </nav>
 
                      <div class="content__bio">
