Updated from Publii

--- a/404.html
+++ b/404.html
@@ -102,10 +102,10 @@
             <header class="hero">
                 <h1>404</h1>
             </header>
-            <p>The page you were looking for appears to have been moved, deleted or does not exist. You could go back to where you were or head straight to our home page.</p>
+            <p>Página não encontrada.</p>
             <p> 
                 <a href="https://expoturismoparaiba.com.br/" class="btn hero__cta btn--icon">
-                  <span>← Go home</span>
+                  <span>← Voltar pra Home</span>
                </a>
             </p>
         </article>
