--- a/autores/equipe/index.html
+++ b/autores/equipe/index.html
@@ -555,7 +555,7 @@
             </section>
             <nav class="pagination desc">
                      <a href="https://expoturismoparaiba.com.br/autores/equipe/pagina/2/" class="btn">
-                           Previous
+                           Anterior
                      </a>
             </nav>
 </main>
