--- a/autores/equipe/pagina/2/index.html
+++ b/autores/equipe/pagina/2/index.html
@@ -564,10 +564,10 @@
             </section>
             <nav class="pagination desc">
                      <a href="https://expoturismoparaiba.com.br/autores/equipe/pagina/3/" class="btn">
-                           Previous
+                           Anterior
                      </a>
                      <a href="https://expoturismoparaiba.com.br/autores/equipe/" class="btn">
-                           Next
+                           Próximo
                      </a>
             </nav>
 </main>
