--- a/autores/equipe/pagina/3/index.html
+++ b/autores/equipe/pagina/3/index.html
@@ -307,7 +307,7 @@
             </section>
             <nav class="pagination desc">
                      <a href="https://expoturismoparaiba.com.br/autores/equipe/pagina/2/" class="btn">
-                           Next
+                           Próximo
                      </a>
             </nav>
 </main>
