--- a/categorias/dicas/index.html
+++ b/categorias/dicas/index.html
@@ -547,7 +547,7 @@
             </section>
             <nav class="pagination desc">
                      <a href="https://expoturismoparaiba.com.br/categorias/dicas/pagina/2/" class="btn">
-                           Previous
+                           Anterior
                      </a>
             </nav>
 </main>
