--- a/categorias/dicas/pagina/2/index.html
+++ b/categorias/dicas/pagina/2/index.html
@@ -329,7 +329,7 @@
             </section>
             <nav class="pagination desc">
                      <a href="https://expoturismoparaiba.com.br/categorias/dicas/" class="btn">
-                           Next
+                           Próximo
                      </a>
             </nav>
 </main>
