--- a/categorias/index.html
+++ b/categorias/index.html
@@ -100,10 +100,10 @@
 <main class="page page--tags">
    <section class="hero wrapper">
       <p>
-         Collection of all tags
+         Coleção de Categorias
       </p>
       <h1>
-         Tags
+         Categorias
          <sup>(6)</sup>
       </h1>    
    </section>
