--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
       </section>
       <nav class="pagination desc">
                <a href="https://expoturismoparaiba.com.br/pagina/2/" class="btn">
-                     Previous
+                     Anterior
                </a>
       </nav>
 </main>
