--- a/pagina/2/index.html
+++ b/pagina/2/index.html
@@ -650,10 +650,10 @@
       </section>
       <nav class="pagination desc">
                <a href="https://expoturismoparaiba.com.br/pagina/3/" class="btn">
-                     Previous
+                     Anterior
                </a>
                <a href="https://expoturismoparaiba.com.br/" class="btn">
-                     Next
+                     Próximo
                </a>
       </nav>
 </main>
