--- a/pagina/3/index.html
+++ b/pagina/3/index.html
@@ -357,7 +357,7 @@
       </section>
       <nav class="pagination desc">
                <a href="https://expoturismoparaiba.com.br/pagina/2/" class="btn">
-                     Next
+                     Próximo
                </a>
       </nav>
 </main>
