Updated from Publii

--- a/como-combinar-uma-viagem-entre-joao-pessoa-e-fernando-de-noronha/index.html
+++ b/como-combinar-uma-viagem-entre-joao-pessoa-e-fernando-de-noronha/index.html
@@ -198,6 +198,14 @@
                                  </a>
                               </h5>
                            </div>
+                           <div class="content__nav__next">
+                              Próximo Post
+                              <h5>
+                                 <a href="https://expoturismoparaiba.com.br/melhore-as-vendas-no-turismo-o-papel-da-caneca-personalizada-na-experiencia-do-viajante-e-na-rentabilidade-de-negocios-locais/" class="invert" rel="next">
+                                    Melhore as Vendas no Turismo: O Papel da Caneca Personalizada na Experiência do Viajante e na Rentabilidade de Negócios Locais
+                                 </a>
+                              </h5>
+                           </div>
                      </nav>
 
                      <div class="content__bio">
