Updated from Publii

--- a/renovacao-estetica-o-papel-do-pintor-na-estrategia-de-repaginar-o-hotel-para-a-alta-temporada/index.html
+++ b/renovacao-estetica-o-papel-do-pintor-na-estrategia-de-repaginar-o-hotel-para-a-alta-temporada/index.html
@@ -224,6 +224,14 @@
                                  </a>
                               </h5>
                            </div>
+                           <div class="content__nav__next">
+                              Próximo Post
+                              <h5>
+                                 <a href="https://expoturismoparaiba.com.br/transforme-sua-viagem-a-fernando-de-noronha-em-um-ensaio-fotografico/" class="invert" rel="next">
+                                    Transforme Sua Viagem a Fernando de Noronha em um Ensaio Fotográfico
+                                 </a>
+                              </h5>
+                           </div>
                      </nav>
 
                      <div class="content__bio">
