Updated from Publii

--- a/categorias/index.html
+++ b/categorias/index.html
@@ -117,7 +117,7 @@
                            Agência de Viagem
                         </h2>
                         <span>
-                           1 Post
+                           2 Posts
                         </span>
                      </div>
                   </div>
